src/test/deca/context/valid/14_NoInitialization.deca
// Description:
//    Test NoInitialization()
//
// Résultats:
//
//
// Historique:
//    cree le 16/01/2022

{
        int x;
        println(x);
}
