src/test/deca/context/invalid/35_VoidParam.deca
// Description:
//    Affectation et typage
//
// Resultats:
//	Ligne 12: ContextualError: parameter void
// 
// Historique:
//    cree le 01/01/2022

class A {
	// Doit etre refuse.
	void f(void x) {}
}
